fixed image pathing

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <link rel="shortcut icon" type="image/png" href="Starting Files/images/favicon-32x32.png"/>
 </head>
 <body>
-    <img src="Starting Files/images/bg-pattern-top.svg" class="circle-top">
-    <img src="Starting Files/images/bg-pattern-bottom.svg" class="circle-bottom">
+    <img src="images/bg-pattern-top.svg" class="circle-top">
+    <img src="images/bg-pattern-bottom.svg" class="circle-bottom">
     <main>
         <div class="card">
 
             <div class="banner">
-                <img src="Starting Files/images/bg-pattern-card.svg">
+                <img src="images/bg-pattern-card.svg">
             </div>
 
             <div class="about">
-                <img src="Starting Files/images/image-victor.jpg" class="profile-picture">
+                <img src="images/image-victor.jpg" class="profile-picture">
 
                 <div class="name-age">
                     <h1>Victor Crest</h1>
